优化导出页面样式：改进预览弹窗动画，增强移动端适配效果

--- a/miniprogram/pages/export/export.wxss
+++ b/miniprogram/pages/export/export.wxss
@@ -567,10 +567,11 @@
 }
 
 .preview-footer {
-  padding: 20rpx 30rpx;
+  padding: 30rpx 30rpx;
   border-top: 1rpx solid #eee;
   display: flex;
   justify-content: center;
+  margin-top: -50rpx; /* 向上移动按钮 */
 }
 
 .copy-btn {
